src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Accreditation__c</fullName>
        <description>Field indicates if the College is Accredited or not</description>
        <inlineHelpText>Field indicates if the College is Accredited or not</inlineHelpText>
        <label>Accreditation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Not Accredited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admission_Application_Description__c</fullName>
        <description>Field used on the Admission Application and all marketing and communicatio materials</description>
        <label>Admission Application Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bin_Dept_Major__c</fullName>
        <description>Field used on Marketing materials; Calculated field based on Bin, Dept and Major</description>
        <formula>Bin_Number__c &amp; &quot;-&quot; &amp; text(Department__c) &amp; &quot;-&quot; &amp; text(Major__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bin Dept Major</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bin_Number__c</fullName>
        <description>Field used on Marketing materials to break down departmental materials</description>
        <label>Bin Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CEEB_Code__c</fullName>
        <description>Field from Banner of CEEB code for High Schools and Colleges; SOASBGI</description>
        <externalId>true</externalId>
        <label>CEEB Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campus_Code__c</fullName>
        <description>Field from Banner to indicate the Campus; SMAPRLE and SOACURR</description>
        <label>Campus Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>SD</fullName>
                </value>
                <value>
                    <fullName>2PT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Account_Tags__c</fullName>
        <inlineHelpText>Indicates specific tags on the account by looking at activities and opportunities.</inlineHelpText>
        <label>Account Tags</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Untouched</fullName>
                </value>
                <value>
                    <fullName>Cur. Effort</fullName>
                </value>
                <value>
                    <fullName>Past Effort</fullName>
                </value>
                <value>
                    <fullName>Meeting Scheduled</fullName>
                </value>
                <value>
                    <fullName>Meeting, no Opportunity</fullName>
                </value>
                <value>
                    <fullName>Open Opportunity</fullName>
                </value>
                <value>
                    <fullName>Lost Opportunity</fullName>
                </value>
                <value>
                    <fullName>Current Customer</fullName>
                </value>
                <value>
                    <fullName>Churned Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Alias_1__c</fullName>
        <inlineHelpText>A helper field added by Groove</inlineHelpText>
        <label>Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Alias_2__c</fullName>
        <inlineHelpText>A helper field added by Groove</inlineHelpText>
        <label>Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Churned_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>indicates, whether this is a churned customer based on your business specific signals</inlineHelpText>
        <label>Churned Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Domain_1__c</fullName>
        <inlineHelpText>indicates the primary email domain of the account. This is evaluated by Groove periodically</inlineHelpText>
        <label>Domain 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Domain_2__c</fullName>
        <inlineHelpText>indicates the secondary email domain of the account (in case they have more than one). This is evaluated by Groove periodically</inlineHelpText>
        <label>Domain 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Dont_Match_Leads_to_this_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Controls whether Groove will automatically match leads to this account.</inlineHelpText>
        <label>Don&apos;t Match Leads to this Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Engagement_Status__c</fullName>
        <inlineHelpText>Indicates the status of CUSTOMER engagement such as email opens, phone conversations or meetings. The threshold between &quot;recent&quot; and &quot;past&quot; can be customized.</inlineHelpText>
        <label>Engagement Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Past Engagement</fullName>
                </value>
                <value>
                    <fullName>Recent Engagement</fullName>
                </value>
                <value>
                    <fullName>No Engagement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Groove_Notes__c</fullName>
        <inlineHelpText>Contains notes that are surfaced in Groove&apos;s sidebar by default.</inlineHelpText>
        <label>Groove Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Hash_1__c</fullName>
        <inlineHelpText>A helper field added by Groove</inlineHelpText>
        <label>Hash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Hash_2__c</fullName>
        <inlineHelpText>A helper field added by Groove</inlineHelpText>
        <label>Hash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Hash_3__c</fullName>
        <inlineHelpText>A helper field added by Groove</inlineHelpText>
        <label>Hash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Inferred_Status__c</fullName>
        <formula>IF(INCLUDES(DaScoopComposer__Account_Tags__c, &apos;Churned Customer&apos;), &apos;Churned Customer&apos;,

  IF(INCLUDES(DaScoopComposer__Account_Tags__c, &apos;Current Customer&apos;), &apos;Current Customer&apos;,

    IF(INCLUDES(DaScoopComposer__Account_Tags__c, &apos;Lost Opportunity&apos;), &apos;Lost Opportunity&apos;
    &amp; IF(INCLUDES(DaScoopComposer__Account_Tags__c, &apos;Cur. Effort&apos;), &apos; + Cur. Effort&apos;, &apos;&apos;),

      IF(INCLUDES(DaScoopComposer__Account_Tags__c, &apos;Open Opportunity&apos;), &apos;Open Opportunity&apos;,

        IF(INCLUDES(DaScoopComposer__Account_Tags__c, &apos;Meeting, no Opportunity&apos;), &apos;Meeting, no Opportunity&apos;,

          IF(INCLUDES(DaScoopComposer__Account_Tags__c, &apos;Meeting Scheduled&apos;), &apos;Meeting Scheduled&apos;,

            IF(INCLUDES(DaScoopComposer__Account_Tags__c, &apos;Past Effort&apos;), &apos;Past Effort&apos;
            &amp; IF(NOT(ISPICKVAL(DaScoopComposer__Engagement_Status__c, &apos;No Engagement&apos;)), &apos; + Engagement&apos;, &apos;&apos;)
            &amp; IF(ISPICKVAL(DaScoopComposer__Engagement_Status__c, &apos;No Engagement&apos;), &apos; no Engagement&apos;, &apos;&apos;),

              IF(INCLUDES(DaScoopComposer__Account_Tags__c, &apos;Cur. Effort&apos;), &apos;Cur. Effort&apos;
              &amp; IF(ISPICKVAL(DaScoopComposer__Engagement_Status__c, &apos;Recent Engagement&apos;), &apos; + Engagement&apos;, &apos;&apos;)
              &amp; IF(NOT(ISPICKVAL(DaScoopComposer__Engagement_Status__c, &apos;Recent Engagement&apos;)), &apos; no Engagement&apos;, &apos;&apos;),

                IF(INCLUDES(DaScoopComposer__Account_Tags__c, &apos;Untouched&apos;), &apos;Untouched&apos;,
                  &apos;Unknown&apos;
                )
              )
            )
          )
        )
      )
    )
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates the account status in the typical customer life cycle of an account. The status is automatically inferred by looking at activities, engagement signals and opportunities.</inlineHelpText>
        <label>Inferred Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Degree__c</fullName>
        <description>Field from Banner to indicate the Degree; SMAPRLE and SOACURR</description>
        <label>Degree</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Degree_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>Field from Banner to indicate the Department; SMAPRLE and SOACURR</description>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Department_Code_List</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Grabs the Division of an Academic Program</description>
        <formula>if(
    RecordType.Name=&quot;Academic Program&quot;,
    if( 
        Parent.RecordType.Name  = &quot;University Program Group&quot;,
        Parent.Parent.Name,
        if(
            Parent.RecordType.Name=&quot;University Division&quot;,
            Parent.Name,
            null
        )
    ),null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Academic Program&apos;s Division.</inlineHelpText>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expired_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <description>whether or not this Program Name/Code has been expired. Programs that are expired should not show up in searches or lookups.</description>
        <inlineHelpText>Whether this Program has expired, either due to being no longer offered or because it was replaced with a new Program (such as with a new Code)</inlineHelpText>
        <label>Expired Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FICE_Code__c</fullName>
        <description>Field from Banner of FICE code for High Schools and Colleges; SOASBGI</description>
        <externalId>true</externalId>
        <label>FICE Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <description>Field from Banner to indicate the Level; SMAPRLE and SOACURR</description>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CE</fullName>
                </value>
                <value>
                    <fullName>DD</fullName>
                </value>
                <value>
                    <fullName>DT</fullName>
                </value>
                <value>
                    <fullName>DX</fullName>
                </value>
                <value>
                    <fullName>EV</fullName>
                </value>
                <value>
                    <fullName>GR</fullName>
                </value>
                <value>
                    <fullName>GS</fullName>
                </value>
                <value>
                    <fullName>GX</fullName>
                </value>
                <value>
                    <fullName>UG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Major__c</fullName>
        <description>Field from Banner to indicate the Major; SMAPRLE and SOACURR</description>
        <label>Major</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Major_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Code__c</fullName>
        <description>Field from Banner to indicate the Program code; SMAPRLE and SOACURR</description>
        <externalId>true</externalId>
        <label>Program Code</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Program_Group__c</fullName>
        <description>If Account is an Academic Program, return the Program Group.</description>
        <formula>if(
    RecordType.Name=&quot;Academic Program&quot;,
    if( 
        Parent.RecordType.Name  = &quot;University Program Group&quot;,
        Parent.Name, null),
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recruitment_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if this Account should be tied to an Academic Program and available to apply for.</description>
        <label>Recruitment Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School_College__c</fullName>
        <description>Field based on Major from Banner to indicate the Application Type; SMAPRLE and SOACURR</description>
        <label>School / College</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>School_College</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Search_Name__c</fullName>
        <formula>Name + &quot; (&quot; + BillingCity + IF (ISBLANK(BillingState),&quot;&quot;,&quot;, &quot; + BillingState) + &quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Search Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sorted_Bin_Number__c</fullName>
        <description>adds a 0 to Bin Number if less than 10. Let&apos;s make Bin an actual number at some point...</description>
        <formula>if( 
len(Bin_Number__c) = 1, 
&quot;0&quot; &amp; Bin_Number__c, 
Bin_Number__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sorted Bin Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Current_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The current Address that the Account&apos;s billing fields are filled with.</description>
        <inlineHelpText>The current Address that the Account&apos;s billing fields are filled with.</inlineHelpText>
        <label>Current Address</label>
        <referenceTo>hed__Address__c</referenceTo>
        <relationshipLabel>Accounts (Current Address)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account</relationshipLabel>
        <relationshipName>Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>Academic_Programs</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>School_College__c</columns>
        <columns>Program_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Academic_Program</value>
        </filters>
        <label>Academic Programs</label>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Business_Organization</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Business_Organization</value>
        </filters>
        <label>Business Organization</label>
    </listViews>
    <listViews>
        <fullName>Departments</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>School_College__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.University_Department</value>
        </filters>
        <label>Departments</label>
    </listViews>
    <listViews>
        <fullName>Divisions</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.University_Division</value>
        </filters>
        <label>Divisions</label>
    </listViews>
    <listViews>
        <fullName>Educational_Institution</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SIC</columns>
        <columns>SIC_DESC</columns>
        <columns>CEEB_Code__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Educational_Institution</value>
        </filters>
        <label>Educational Institution</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Program_Group</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.University_Program_Group</value>
        </filters>
        <label>Program Groups</label>
    </listViews>
    <listViews>
        <fullName>Sports_Organization</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Sports_Organization</value>
        </filters>
        <label>Sports Organization</label>
    </listViews>
    <recordTypes>
        <fullName>Academic_Program</fullName>
        <active>true</active>
        <description>An Academic Program offered at the University.</description>
        <label>Academic Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>Administrative</fullName>
        <active>true</active>
        <description>An administrative account.</description>
        <label>Administrative</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Organization</fullName>
        <active>true</active>
        <description>A business organization.</description>
        <label>Business Organization</label>
    </recordTypes>
    <recordTypes>
        <fullName>Church</fullName>
        <active>true</active>
        <description>Represents a Church</description>
        <label>Church</label>
    </recordTypes>
    <recordTypes>
        <fullName>Educational_Institution</fullName>
        <active>true</active>
        <description>An educational institution.</description>
        <label>Educational Institution</label>
    </recordTypes>
    <recordTypes>
        <fullName>HH_Account</fullName>
        <active>true</active>
        <description>A Household containing one or more individuals.</description>
        <label>Household Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sports_Organization</fullName>
        <active>true</active>
        <description>A sports organization.</description>
        <label>Sports Organization</label>
    </recordTypes>
    <recordTypes>
        <fullName>University_Department</fullName>
        <active>true</active>
        <description>A department in the university.</description>
        <label>University Department</label>
    </recordTypes>
    <recordTypes>
        <fullName>University_Division</fullName>
        <active>true</active>
        <description>A division in the university</description>
        <label>University Division</label>
    </recordTypes>
    <recordTypes>
        <fullName>University_Program_Group</fullName>
        <active>true</active>
        <description>A program group in the university</description>
        <label>University Program Group</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>